// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error 1`] = `null`;

exports[`2. a full article with an image as the lead asset 1`] = `
<article>
  <div>
    <Ad
      contextUrl="https://www.thetimes.co.uk/edition/news/france-defies-may-over-russia-37b27qd2s"
      section="news"
      slotName="header"
    />
  </div>
  <div>
    <header>
      <div>
        <div>
          <div>
            <div>
              HURRICANE IRMA
            </div>
          </div>
          <h1
            aria-level="1"
            role="heading"
          >
            Caribbean islands devastated by Hurricane Irma, the worst Atlantic storm on record
          </h1>
          <h2
            aria-level="2"
            role="heading"
          >
            How did one of Britain’s top young athletes end up running elite parties for swingers? Chris Reynolds Gordon tells Rick Broadbent about his extraordinary life
          </h2>
          <div>
            <div>
              <NewArticleFlag />
            </div>
            <div>
              <ExclusiveArticleFlag />
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <span>
              <ArticleBylineWithLinks
                ast={
                  Array [
                    Object {
                      "attributes": Object {
                        "slug": "camilla-long",
                      },
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Camilla Long",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "author",
                    },
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": ", Environment Editor",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "inline",
                    },
                    Object {
                      "attributes": Object {
                        "slug": "camilla-long",
                      },
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Camilla Long",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "author",
                    },
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": ", Environment Editor",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "inline",
                    },
                    Object {
                      "attributes": Object {
                        "slug": "camilla-long",
                      },
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Camilla Long",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "author",
                    },
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": ", Environment Editor",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "inline",
                    },
                    Object {
                      "attributes": Object {
                        "slug": "camilla-long",
                      },
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Camilla Long",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "author",
                    },
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": ", Environment Editor",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "inline",
                    },
                  ]
                }
                color="#333333"
              />
            </span>
          </div>
          <div>
            <span>
              <DatePublication
                date="2015-03-13T18:54:58.000Z"
                publication="TIMES"
              />
            </span>
          </div>
        </div>
        <div>
          <nav>
            <ArticleTopics
              topics={
                Array [
                  Object {
                    "__typename": "Topic",
                    "name": "Football",
                    "slug": "football",
                  },
                  Object {
                    "__typename": "Topic",
                    "name": "Manchester United FC",
                    "slug": "manchester-united",
                  },
                  Object {
                    "__typename": "Topic",
                    "name": "Chelsea FC",
                    "slug": "chelsea",
                  },
                  Object {
                    "__typename": "Topic",
                    "name": "Arsenal",
                    "slug": "arsenal",
                  },
                  Object {
                    "__typename": "Topic",
                    "name": "Rugby Union",
                    "slug": "rugby-union",
                  },
                ]
              }
            />
          </nav>
        </div>
      </div>
      <div>
        <div>
          <figure>
            <div>
              <div>
                <Image
                  highResSize={null}
                  lowResSize={100}
                  uri="https://crop169.io/"
                />
              </div>
            </div>
            <div>
              <figcaption>
                <Caption
                  credits="The credits"
                  text="Chris Reynolds Gordon at one of his party venues in London"
                />
              </figcaption>
            </div>
          </figure>
        </div>
      </div>
    </header>
    <div>
      <div
        id="0"
      >
        <div>
          <ArticleImage
            captionOptions={
              Object {
                "caption": "An image caption",
                "credits": "The image credits",
              }
            }
            imageOptions={
              Object {
                "display": "primary",
                "highResSize": null,
                "lowResSize": 100,
                "ratio": "1500:1000",
                "uri": "https://image.io",
              }
            }
          />
        </div>
      </div>
      <Link
        target="_blank"
        url="https://link.io"
      >
        Some Link
      </Link>
      <span>
        <p>
          Some content
        </p>
        <div>
          <div>
            <PullQuote
              caption="AName"
              content="A pull quote"
              twitter="@AName"
            />
          </div>
        </div>
        <div>
          <figure>
            <div>
              <div>
                <div>
                  <div>
                    <video
                      controls={true}
                      data-account="57838016001"
                      data-application-id={true}
                      data-embed="default"
                      data-player="default"
                      data-video-id="4084164751001"
                      id="4084164751001-57838016001-1"
                      poster="https://image.io"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div>
                <Caption
                  text="This is video caption"
                />
              </div>
            </figcaption>
          </figure>
        </div>
      </span>
    </div>
  </div>
  <div>
    <nav>
      <ArticleTopics
        topics={
          Array [
            Object {
              "__typename": "Topic",
              "name": "Football",
              "slug": "football",
            },
            Object {
              "__typename": "Topic",
              "name": "Manchester United FC",
              "slug": "manchester-united",
            },
            Object {
              "__typename": "Topic",
              "name": "Chelsea FC",
              "slug": "chelsea",
            },
            Object {
              "__typename": "Topic",
              "name": "Arsenal",
              "slug": "arsenal",
            },
            Object {
              "__typename": "Topic",
              "name": "Rugby Union",
              "slug": "rugby-union",
            },
          ]
        }
      />
    </nav>
  </div>
  <aside
    id="related-articles"
  >
    <RelatedArticles
      isVisible={false}
      slice={
        Object {
          "__typename": "StandardSlice",
          "items": Array [
            Object {
              "article": Object {
                "__typename": "Article",
                "byline": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Patrick Kidd",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "inline",
                  },
                ],
                "headline": "TMS: Pratchett’s law of the jungle - Disable Saving",
                "id": "ea16d744-cb4a-11e4-a202-50ac5def393a",
                "label": "Health",
                "leadAsset": Object {
                  "__typename": "Image",
                  "crop169": Object {
                    "__typename": "Crop",
                    "url": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0547a7be-fb77-11e7-a987-7fcf5e9983dc.jpg?crop=2000%2C1125%2C0%2C104",
                  },
                  "crop32": Object {
                    "__typename": "Crop",
                    "url": "//nu-cps-imgsrv-tnl-dev-webapp.elb.tnl-dev.ntch.co.uk/imageserver/image/9a9cf7c4b313584c4b1a231ffea56ad3154cc520.jpg?crop=780%2C520%2C0%2C0",
                  },
                  "id": "ea16d744-cb4a-11e4-a202-50ac5def393b",
                  "title": "TMS: Pratchett’s law of the jungle",
                },
                "publicationName": "TIMES",
                "publishedTime": "2015-03-23T19:39:39.000Z",
                "section": "",
                "shortHeadline": "Pratchett’s law of the jungle",
                "summary105": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Terry Pratchett, who died last week, began his career on the ",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                      Object {
                        "attributes": Object {},
                        "children": Array [
                          Object {
                            "attributes": Object {
                              "value": "Bucks Free Press",
                            },
                            "children": Array [],
                            "name": "text",
                          },
                        ],
                        "name": "italic",
                      },
                      Object {
                        "attributes": Object {
                          "value": " in 1965, aged 17, and the",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary125": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Terry Pratchett, who died last week, began his career on the ",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                      Object {
                        "attributes": Object {},
                        "children": Array [
                          Object {
                            "attributes": Object {
                              "value": "Bucks Free Press",
                            },
                            "children": Array [],
                            "name": "text",
                          },
                        ],
                        "name": "italic",
                      },
                      Object {
                        "attributes": Object {
                          "value": " in 1965, aged 17, and the paper recalls in a",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary145": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Terry Pratchett, who died last week, began his career on the ",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                      Object {
                        "attributes": Object {},
                        "children": Array [
                          Object {
                            "attributes": Object {
                              "value": "Bucks Free Press",
                            },
                            "children": Array [],
                            "name": "text",
                          },
                        ],
                        "name": "italic",
                      },
                      Object {
                        "attributes": Object {
                          "value": " in 1965, aged 17, and the paper recalls in a tribute that he wore",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary160": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Terry Pratchett, who died last week, began his career on the ",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                      Object {
                        "attributes": Object {},
                        "children": Array [
                          Object {
                            "attributes": Object {
                              "value": "Bucks Free Press",
                            },
                            "children": Array [],
                            "name": "text",
                          },
                        ],
                        "name": "italic",
                      },
                      Object {
                        "attributes": Object {
                          "value": " in 1965, aged 17, and the paper recalls in a tribute that he wore his school",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary175": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Terry Pratchett, who died last week, began his career on the ",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                      Object {
                        "attributes": Object {},
                        "children": Array [
                          Object {
                            "attributes": Object {
                              "value": "Bucks Free Press",
                            },
                            "children": Array [],
                            "name": "text",
                          },
                        ],
                        "name": "italic",
                      },
                      Object {
                        "attributes": Object {
                          "value": " in 1965, aged 17, and the paper recalls in a tribute that he wore his school uniform to his job",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary225": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Terry Pratchett, who died last week, began his career on the ",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                      Object {
                        "attributes": Object {},
                        "children": Array [
                          Object {
                            "attributes": Object {
                              "value": "Bucks Free Press",
                            },
                            "children": Array [],
                            "name": "text",
                          },
                        ],
                        "name": "italic",
                      },
                      Object {
                        "attributes": Object {
                          "value": " in 1965, aged 17, and the paper recalls in a tribute that he wore his school uniform to his job interview. The editor, impressed, told him: “I like",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "url": "http://cps-render-ci.elb.tnl-dev.ntch.co.uk/article/tms-pratchetts-law-of-the-jungle-xgqrcw779",
              },
            },
            Object {
              "article": Object {
                "__typename": "Article",
                "byline": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Graeme Paton Transport Correspondent",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "inline",
                  },
                ],
                "headline": "Rise of centenarian drivers as elderly push on - V5 Premoderated Comments",
                "id": "b09fc422-cb53-11e4-81dd-064fe933cd41",
                "label": "Science",
                "leadAsset": Object {
                  "__typename": "Image",
                  "crop169": Object {
                    "__typename": "Crop",
                    "url": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F82723c10-fb7f-11e7-a987-7fcf5e9983dc.jpg?crop=4886%2C2748%2C92%2C108",
                  },
                  "crop32": Object {
                    "__typename": "Crop",
                    "url": "//nu-cps-imgsrv-tnl-dev-webapp.elb.tnl-dev.ntch.co.uk/imageserver/image/9bc3086dbe80a6be3b1974aac6df2d6e7a16af57.jpg?crop=780%2C520%2C0%2C0",
                  },
                  "id": "b09fc422-cb53-11e4-81dd-064fe933cd41",
                  "title": "Rise of centenarian drivers as elderly push on",
                },
                "publicationName": "TIMES",
                "publishedTime": "2015-03-23T20:42:27.000Z",
                "section": "",
                "shortHeadline": "Rise of centenarian drivers",
                "summary105": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "More than 200 motorists are still on the road after celebrating their 100th birthday as older people",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary125": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "More than 200 motorists are still on the road after celebrating their 100th birthday as older people become increasingly",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary145": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "More than 200 motorists are still on the road after celebrating their 100th birthday as older people become increasingly reliant on the car.",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                  Object {
                    "attributes": Object {},
                    "children": Array [],
                    "name": "paragraph",
                  },
                ],
                "summary160": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "More than 200 motorists are still on the road after celebrating their 100th birthday as older people become increasingly reliant on the car.",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Figures from the",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary175": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "More than 200 motorists are still on the road after celebrating their 100th birthday as older people become increasingly reliant on the car.",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Figures from the Driver and Vehicle",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary225": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "More than 200 motorists are still on the road after celebrating their 100th birthday as older people become increasingly reliant on the car.",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Figures from the Driver and Vehicle Licensing Agency revealed that record numbers of",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "url": "http://cps-render-ci.elb.tnl-dev.ntch.co.uk/article/rise-of-centenarian-drivers-as-elderly-push-on-6gb0bjnpz",
              },
            },
            Object {
              "article": Object {
                "__typename": "Article",
                "byline": Array [
                  Object {
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "John Simpson, Crime Correspondent | Will Humphries",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "inline",
                  },
                ],
                "headline": "YouTube ignored police pleas to remove threatening videos",
                "id": "cab431f6-39df-11e8-b5b4-b935584040f4",
                "label": "Youtube",
                "leadAsset": Object {
                  "__typename": "Video",
                  "posterImage": Object {
                    "__typename": "Image",
                    "crop169": Object {
                      "__typename": "Crop",
                      "ratio": "16:9",
                      "url": "https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Ffa613a54-39c4-11e8-b5b4-b935584040f4.jpg?crop=939%2C528%2C0%2C0",
                    },
                    "crop32": Object {
                      "__typename": "Crop",
                      "ratio": "3:2",
                      "url": "https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Ffa613a54-39c4-11e8-b5b4-b935584040f4.jpg?crop=792%2C528%2C73%2C0",
                    },
                    "id": "f5eacb2d-2f87-46cb-a36a-225bf9a6482f",
                    "title": "",
                  },
                },
                "publicationName": "TIMES",
                "publishedTime": "2018-04-06T23:01:00.000Z",
                "section": "news",
                "shortHeadline": "YouTube ignored police pleas",
                "summary105": Array [
                  Object {
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Light gleamed from the blade of what appeared to be a combat knife in a video of a huddled group of",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary125": Array [
                  Object {
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Light gleamed from the blade of what appeared to be a combat knife in a video of a huddled group of teenage boys in hoods and",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary145": Array [
                  Object {
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Light gleamed from the blade of what appeared to be a combat knife in a video of a huddled group of teenage boys in hoods and masks in Haringey",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary160": Array [
                  Object {
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Light gleamed from the blade of what appeared to be a combat knife in a video of a huddled group of teenage boys in hoods and masks in Haringey, north London",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary175": Array [
                  Object {
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Light gleamed from the blade of what appeared to be a combat knife in a video of a huddled group of teenage boys in hoods and masks in Haringey, north London. Within a week a",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary225": Array [
                  Object {
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Light gleamed from the blade of what appeared to be a combat knife in a video of a huddled group of teenage boys in hoods and masks in Haringey, north London. Within a week a boy linked to a group known as G Lanes had been",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "url": "https://www.thetimes.co.uk/article/youtube-ignored-police-pleas-to-remove-threatening-videos-62v2mqp23",
              },
            },
          ],
          "sliceName": "StandardSlice",
        }
      }
    />
  </aside>
  <Ad
    contextUrl="https://www.thetimes.co.uk/edition/news/france-defies-may-over-russia-37b27qd2s"
    section="news"
    slotName="pixel"
  />
  <Ad
    contextUrl="https://www.thetimes.co.uk/edition/news/france-defies-may-over-russia-37b27qd2s"
    section="news"
    slotName="pixelteads"
  />
  <Ad
    contextUrl="https://www.thetimes.co.uk/edition/news/france-defies-may-over-russia-37b27qd2s"
    section="news"
    slotName="pixelskin"
  />
</article>
`;

exports[`3. an article with a video as the lead asset 1`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <header>
      <div>
        <div>
          <div>
            <VideoLabel
              color="#333333"
              title={null}
            />
          </div>
          <h1
            aria-level="1"
            role="heading"
          >
            Some Headline
          </h1>
        </div>
      </div>
      <div>
        <div>
          <div>
            <span>
              <DatePublication
                date="2015-03-13T18:54:58.000Z"
                publication="TIMES"
              />
            </span>
          </div>
        </div>
      </div>
      <div>
        <div>
          <figure>
            <div>
              <div>
                <div>
                  <div>
                    <video
                      controls={true}
                      data-account="5436121857001"
                      data-application-id={true}
                      data-embed="default"
                      data-player="default"
                      data-video-id="5831024132001"
                      id="5831024132001-5436121857001-2"
                      poster="https://video169.io"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div>
              <figcaption>
                <Caption
                  text="This is video caption"
                />
              </figcaption>
            </div>
          </figure>
        </div>
      </div>
    </header>
    <div>
      <p>
        Some content
      </p>
    </div>
  </div>
  <aside
    id="related-articles"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixel"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelteads"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelskin"
  />
</article>
`;

exports[`4. an article with no lead asset 1`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <header>
      <div>
        <div>
          <h1
            aria-level="1"
            role="heading"
          >
            Some Headline
          </h1>
        </div>
      </div>
      <div>
        <div>
          <div>
            <span>
              <DatePublication
                date="2015-03-13T18:54:58.000Z"
                publication="TIMES"
              />
            </span>
          </div>
        </div>
      </div>
      <div />
    </header>
    <div>
      <p>
        Some content
      </p>
    </div>
  </div>
  <aside
    id="related-articles"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixel"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelteads"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelskin"
  />
</article>
`;

exports[`5. an article with ads 1`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <header>
      <div>
        <div>
          <h1
            aria-level="1"
            role="heading"
          >
            Some Headline
          </h1>
        </div>
      </div>
      <div>
        <div>
          <div>
            <span>
              <DatePublication
                date="2015-03-13T18:54:58.000Z"
                publication="TIMES"
              />
            </span>
          </div>
        </div>
      </div>
      <div />
    </header>
    <div>
      <Ad
        contextUrl="https://url.io"
        section="Some Section"
        slotName="inline-ad"
      />
    </div>
  </div>
  <aside
    id="related-articles"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixel"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelteads"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelskin"
  />
</article>
`;

exports[`6. an article loading state 1`] = `
<div>
  Loading ...
</div>
`;

exports[`7. an article with updated byline 1`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <header>
      <div>
        <div>
          <h1
            aria-level="1"
            role="heading"
          >
            Some Headline
          </h1>
        </div>
      </div>
      <div>
        <div>
          <div>
            <span>
              <DatePublication
                date="2015-03-13T18:54:58.000Z"
                publication="TIMES"
              />
            </span>
          </div>
        </div>
      </div>
      <div />
    </header>
    <div>
      <p>
        Some content
      </p>
    </div>
  </div>
  <aside
    id="related-articles"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixel"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelteads"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelskin"
  />
</article>
`;

exports[`7. an article with updated byline 2`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <header>
      <div>
        <div>
          <h1
            aria-level="1"
            role="heading"
          >
            Some Headline
          </h1>
        </div>
      </div>
      <div>
        <div>
          <div>
            <span>
              <ArticleBylineWithLinks
                ast={
                  Array [
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Some byline",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "inline",
                    },
                  ]
                }
                color="#FFFFFF"
              />
            </span>
          </div>
          <div>
            <span>
              <DatePublication
                date="2015-03-13T18:54:58.000Z"
                publication="TIMES"
              />
            </span>
          </div>
        </div>
      </div>
      <div />
    </header>
    <div>
      <p>
        Some content
      </p>
    </div>
  </div>
  <aside
    id="related-articles"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixel"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelteads"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelskin"
  />
</article>
`;
